<resources>
    <string name="app_name">Chess Tracker</string>
    <string name="sign_in_string">Sign in</string>
    <string name="sign_up_string">Sign up</string>
    <string name="sign_out_string">Sign out</string>
    <string name="the_white">White Player</string>
    <string name="the_dark">Black Player</string>
    <string name="name_player">Name:</string>
    <string name="surname_player">Surname:</string>
    <string name="elo_player">Elo:</string>
    <string name="result_game_draft">Draft</string>
    <string name="game_result">Winner:</string>
    <string name="nbOfMovePlayed">Number of move played:</string>
    <string name="email_player">Email:</string>
    <string name="password_player">Password:</string>
    <string name="password_verif_player">Enter password again:</string>
    <string name="register_game">Register this chess game</string>
    <string name="watch_game">Replay a game</string>
    <string name="register_new_game">Register a new game</string>
    <string name="id_player">User ID:</string>
    <string name="id_oponent">Oponent ID:</string>
    <string name="fillOponentId">If your oponent does not use the app, just let 0 as default value. Or just let him know about the app ;)</string>
    <string name="chooseColor">Your color:</string>
    <string name="surrenderWhite">White surrender</string>
    <string name="surrenderBlack">Black Surrender</string>
    <string name="draw">Draw</string>
    <string name="currentMoveNumber">Current Move: #</string>
    <string name="registerPicture">Add image to game</string>
    <string name="title_activity_maps">Map</string>
    <string name="loc_permitted">Location permission given</string>
    <string name="locate_string">Localisation</string>
    <string name="findLocation">Where am I ?</string>
</resources>