<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterGame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.90">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_oponent"/>
                <EditText
                    android:id="@+id/inputOponentId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fillOponentId"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseColor"/>
                <Spinner
                    android:id="@+id/inputPlayerColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <fragment android:name="fr.ece.edu.ec.chess_tracker.ChessBoardFragment"
                android:id="@+id/chessBoardInteractiv"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:baselineAligned="false"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSurrendBlack"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:onClick="registerGame"
            android:text="@string/surrenderBlack"/>
        <Button
            android:id="@+id/btnDraw"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:onClick="registerDraw"
            android:text="@string/draw"/>
        <Button
            android:id="@+id/btnSurrendWhite"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:onClick="registerGame"
            android:text="@string/surrenderWhite"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/registerPicture"
        android:onClick="takePicture"
        android:enabled="true"/>
    <Button
        android:id="@+id/btnValidateAndRegisterGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:enabled="false"
        android:onClick="registerGame"
        android:text="@string/register_game" />
</LinearLayout>