<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartUpMenu">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            app:srcCompat="@drawable/chess_pawn"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.30"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp"
                android:textStyle="bold|italic" />
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:onClick="onClick"
                android:text="@string/sign_up_string"/>
            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_margin="3px"
                android:text="@string/sign_in_string"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>