<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.30"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_weight="0.30"
            android:orientation="horizontal">

        </LinearLayout>
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            app:srcCompat="@drawable/chess_pawn"/>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_weight="0.30"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_weight="0.20"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_player"/>
        <EditText
            android:id="@+id/inputEmailPlayerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_player"/>
        <EditText
            android:id="@+id/inputPasswordPlayerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/validSignInPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="signInOnClick"
        android:text="@string/sign_in_string"/>

</LinearLayout>